--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
 			<version>1.12.588</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
